tests/build/02-enum.stderr
error: Deriving enums is not supported
 --> $DIR/02-enum.rs:4:5
  |
4 | pub enum Nothing {
  |     ^^^^
