tests/build/02-enum.rs
use dict_derive::FromPyObject;

#[derive(FromPyObject)]
pub enum Nothing {
    None,
}

fn main() {}
